# adk-conn

./: README.md
.devcontainer/: devcontainer.json
.specs/adr/: 0001-standardize-connector-runtime-contract.md
conn/: __init__.py  agent.py  pyproject.toml
docs/: README.md  overview.md  runtime-and-configuration.md
